# appweb-inventory

./: README.md
api/: .gitignore  manage.py  pyproject.toml  pytest.ini
api/config/: asgi.py  env.py  urls.py  wsgi.py
api/config/django/: base.py  local.py  production.py  staging.py  test.py
api/config/settings/: auth.py  celery.py  channels.py  cors.py  infrastructure.py  logging.py  sessions.py
api/core_apps/accounts/: __init__.py  apps.py
api/core_apps/accounts/admins/: __init__.py  user.py
api/core_apps/accounts/choices/: __init__.py  user.py
api/core_apps/accounts/constants/: __init__.py  users.py
api/core_apps/accounts/managers/: __init__.py  user.py
api/core_apps/accounts/migrations/: 0001_initial.py
api/core_apps/accounts/models/: __init__.py  user.py
api/core_apps/accounts/serializers/: __init__.py  auth.py  users.py
api/core_apps/accounts/urls/: __init__.py  auth_urls.py  main_urls.py
api/core_apps/common/: __init__.py  apps.py
api/core_apps/database/: __init__.py  apps.py
api/core_apps/infrastructure/: __init__.py  apps.py  urls.py
api/core_apps/inventory/: __init__.py  admin.py  apps.py
api/database/: __init__.py  apps.py
api/database/management/: __init__.py
api/database/services/: __init__.py  config.py  identifiers.py  postgres_admin.py  table_maintenance.py
api/env/: .env.example
api/localization/: __init__.py  apps.py
api/localization/management/: __init__.py
api/localization/services/: __init__.py  config.py  paths.py
api/requirements/: base.in  base.txt  test.in  test.txt
backend/: .gitignore  db.sqlite3  (+1 more)
(+145 files in other folders)
